improving component tests for clarity

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Code quality cli tools that will help you to keep your code organized and clean.",
   "main": "src/index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha ./src/**/_tests/index.js"
+    "test": "npm run lint:js && nyc --reporter=html --reporter=text mocha ./src/**/_tests/index.js",
+    "lint:js": "eslint ./src"
   },
   "author": "Erwin Gaitan O <erwingaitano@gmail.com>",
   "license": "ISC",
