--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "commander": "^2.10.0",
+    "fs-extra": "^3.0.1",
     "glob": "^7.1.2",
     "node-helpers": "git+https://github.com/erwingaitano/node-helpers.git"
   }
