--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Code quality cli tools that will help you to keep your code organized and clean.",
   "main": "src/index.js",
+  "bin": {
+    "code-quality": "src/index.js"
+  },
   "scripts": {
     "test": "npm run clean:ds_store && npm run lint:js && npm run test:coverage",
     "test:coverage": "nyc --reporter=html --reporter=text mocha ./src/**/_tests/index.js",
