--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
   "author": "Erwin Gaitan O <erwingaitano@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^8.0.7",
     "husky": "^0.14.1",
     "mocha": "^3.4.2",
     "nyc": "^11.0.2",
-    "onchange": "^3.2.1"
+    "onchange": "^3.2.1",
+    "typescript": "^2.4.1"
   },
   "dependencies": {
     "commander": "^2.10.0",
     "fs-extra": "^3.0.1",
     "glob": "^7.1.2",
     "lodash": "^4.17.4",
-    "node-helpers": "git+https://github.com/erwingaitano/node-helpers.git"
+    "node-helpers": "git+https://github.com/erwingaitano/node-helpers.git",
+    "typestyle": "^1.3.7"
   },
   "repository": {
     "type": "git",
