--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "author": "Erwin Gaitan O <erwingaitano@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/commander": "^2.9.1",
+    "@types/fs-extra": "^3.0.3",
     "@types/node": "^8.0.7",
     "husky": "^0.14.1",
     "mocha": "^3.4.2",
     "nyc": "^11.0.2",
     "onchange": "^3.2.1",
+    "ts-node": "^3.1.0",
     "typescript": "^2.4.1"
   },
   "dependencies": {
@@ -32,8 +35,7 @@
     "fs-extra": "^3.0.1",
     "glob": "^7.1.2",
     "lodash": "^4.17.4",
-    "node-helpers": "git+https://github.com/erwingaitano/node-helpers.git",
-    "typestyle": "^1.3.7"
+    "node-helpers": "git+https://github.com/erwingaitano/node-helpers.git"
   },
   "repository": {
     "type": "git",
