--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Code quality cli tools that will help you to keep your code organized and clean.",
   "main": "src/index.js",
   "bin": {
-    "code-quality": "src/index.js"
+    "code-quality": "lib/index.js"
   },
   "scripts": {
     "precommit": "npm run test",
-    "prepush": "npm run test",
     "pretest": "npm run clean && npm run lint",
-    "test": "mocha ./src/**/_tests/index.js",
+    "test": "mocha -r ts-node/register ./src/**/_tests/index.ts",
     "test-watch": "npm run test -- -w",
     "test-coverage": "nyc --reporter=html --reporter=text npm run test",
     "test-coverage-watch": "onchange './src/**/*.js' -- npm run test-coverage",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@types/commander": "^2.9.1",
     "@types/fs-extra": "^3.0.3",
+    "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.7",
     "husky": "^0.14.1",
     "mocha": "^3.4.2",
