--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "precommit": "npm run test",
     "prepush": "npm run test",
     "pretest": "npm run clean && npm run lint",
-    "test": "mocha ./src/_tests/index.js",
+    "test": "mocha {./src/**/_tests/index.js,./src/_tests/index.js}",
     "test-watch": "npm run test -- -w",
     "test-coverage": "nyc --reporter=html --reporter=text npm run test",
     "test-coverage-watch": "onchange './src/**/*.js' -- npm run test-coverage",
